--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "ask-sdk": "^2.0.0",
+    "request": "latest",
     "request-promise": "latest",
     "cheerio": "latest"
   }
